--- a/org.ekstep.metadata-1.3/editor/templates/unitMetaTemplate.html
+++ b/org.ekstep.metadata-1.3/editor/templates/unitMetaTemplate.html
@@ -1,18 +1,19 @@
 <div ng-app="org.ekstep.metadataform" ng-controller="metadataForm as $ctrl" id="unitMetaTemplate" ng-init="init()">
     <div class="ui active" id="meta-modal">
         <div class="">
+         
             <form id="content-meta-form" class="ui form segment" novalidate name="metaForm" ng-if="$parent.$parent.mode === 'Edit'">
                 <div class="fields">
                     <div class="field form-fields-except-image">
-                        <div ng-class="(dynamicField.inputType == 'textarea')? 'ten wide column': 'six wide column'  " ng-repeat="dynamicField in dynamicLayoutConfigurations ">
+                        <div ng-class="(dynamicField.inputType == 'textarea')? 'ten wide column': 'six wide column'  " ng-repeat="dynamicField in dynamicLayoutConfigurations">
                             <div id="{{dynamicField.code}} " class="field " ng-class="{'error': (!metaForm[dynamicField.code].$valid && isSubmit), 'required': dynamicField.required}"
                                 name="{{dynamicField.code}}
-                                        " ng-if="(dynamicField.inputType=='text') ">
+                                        " ng-if="(dynamicField.inputType=='text'|| dynamicField.inputType == 'number') ">
                                 <label>{{dynamicField.label | uppercase}}</label>
                                 <div>
                                     <div class="ui input " ng-class="{ 'disabled':!dynamicField.editable} ">
-                                        <input ng-class="{error: !metaForm[dynamicField.code].$valid}" id="{{dynamicField.code}} " placeholder={{dynamicField.placeholder}} name="{{dynamicField.code}} " ng-model="contentMeta[dynamicField.code] "
-                                            type="text " ng-required="{{dynamicField.required}} " ng-pattern="dynamicField.validation.regex['value']"
+                                        <input ng-class="{error: !metaForm[dynamicField.code].$valid}" id="{{dynamicField.code}}" placeholder={{dynamicField.placeholder}} name="{{dynamicField.code}} " ng-model="contentMeta[dynamicField.code] "
+                                            type="text" ng-required="{{dynamicField.required}}" ng-pattern="dynamicField.validation.regex['value']"
                                             ng-maxlength="{{dynamicField.validation.max[ 'value']}}" ng-keyup="onConfigChange({target: '#unitMetaTemplate', form:metaForm}); $parent.$parent.updateNode(contentMeta);"
                                             ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField, form:metaForm}); $parent.$parent.updateNode(contentMeta);">
                                     </div>
@@ -45,6 +46,26 @@
                                 <label>{{dynamicField.label | uppercase}}</label>
                                 <keywords config=dynamicField ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField,form:metaForm})"></keywords>
                             </div>
+                            <div id="{{dynamicField.code}} " class="field " ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
+                            name="{{dynamicField.code}}" ng-if="dynamicField.inputType==='multiselect'">
+                            <label>{{dynamicField.label | uppercase}}</label>
+               
+                            
+                                <div ng-repeat="data in contentMeta['prerequisiteData']">
+                                    {{data}} 
+                                </div>
+                                
+                                        <select  ng-model="blisterPackTemplateSelected" ng-change="changedValue(blisterPackTemplateSelected); $parent.$parent.updateOptions(itemList)" 
+                                             data-ng-options="blisterPackTemplate as blisterPackTemplate.name for blisterPackTemplate in prerequisiteoptions">
+                                            <option value="">Select Prerequisites</option>
+                                        </select>
+                                       
+                                     
+                          <!-- <select> 
+                            <option ng-repeat="option in contentMeta['prerequisite']" ng-select="onOptionChange($event)">{{option.name}}</option>
+                          </select> -->
+                        </div>
+         
                         </div>
                     </div>
                 </div>
