--- a/org.ekstep.metadata-1.3/editor/templates/unitMetaTemplate.html
+++ b/org.ekstep.metadata-1.3/editor/templates/unitMetaTemplate.html
@@ -1,71 +1,105 @@
 <div ng-app="org.ekstep.metadataform" ng-controller="metadataForm as $ctrl" id="unitMetaTemplate" ng-init="init()">
     <div class="ui active" id="meta-modal">
         <div class="">
-         
-            <form id="content-meta-form" class="ui form segment" novalidate name="metaForm" ng-if="$parent.$parent.mode === 'Edit'">
+
+            <form id="content-meta-form" class="ui form segment" novalidate name="metaForm"
+                ng-if="$parent.$parent.mode === 'Edit'">
                 <div class="fields">
                     <div class="field form-fields-except-image">
-                        <div ng-class="(dynamicField.inputType == 'textarea')? 'ten wide column': 'six wide column'  " ng-repeat="dynamicField in dynamicLayoutConfigurations">
-                            <div id="{{dynamicField.code}} " class="field " ng-class="{'error': (!metaForm[dynamicField.code].$valid && isSubmit), 'required': dynamicField.required}"
+                        <div ng-class="(dynamicField.inputType == 'textarea')? 'ten wide column': 'six wide column'  "
+                            ng-repeat="dynamicField in dynamicLayoutConfigurations">
+                            <div id="{{dynamicField.code}} " class="field "
+                                ng-class="{'error': (!metaForm[dynamicField.code].$valid && isSubmit), 'required': dynamicField.required}"
                                 name="{{dynamicField.code}}
-                                        " ng-if="(dynamicField.inputType=='text'|| dynamicField.inputType == 'number') ">
+                                        "
+                                ng-if="(dynamicField.inputType=='text'|| dynamicField.inputType == 'number') &&  dynamicField.code !== 'prerequisite' && dynamicField.code !=='prerequisite_Data'">
                                 <label>{{dynamicField.label | uppercase}}</label>
                                 <div>
                                     <div class="ui input " ng-class="{ 'disabled':!dynamicField.editable} ">
-                                        <input ng-class="{error: !metaForm[dynamicField.code].$valid}" id="{{dynamicField.code}}" placeholder={{dynamicField.placeholder}} name="{{dynamicField.code}} " ng-model="contentMeta[dynamicField.code] "
-                                            type="text" ng-required="{{dynamicField.required}}" ng-pattern="dynamicField.validation.regex['value']"
-                                            ng-maxlength="{{dynamicField.validation.max[ 'value']}}" ng-keyup="onConfigChange({target: '#unitMetaTemplate', form:metaForm}); $parent.$parent.updateNode(contentMeta);"
+                                        <input ng-class="{error: !metaForm[dynamicField.code].$valid}"
+                                            id="{{dynamicField.code}}" placeholder={{dynamicField.placeholder}}
+                                            name="{{dynamicField.code}} " ng-model="contentMeta[dynamicField.code] "
+                                            type="text" ng-required="{{dynamicField.required}}"
+                                            ng-pattern="dynamicField.validation.regex['value']"
+                                            ng-maxlength="{{dynamicField.validation.max[ 'value']}}"
+                                            ng-keyup="onConfigChange({target: '#unitMetaTemplate', form:metaForm}); $parent.$parent.updateNode(contentMeta);"
                                             ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField, form:metaForm}); $parent.$parent.updateNode(contentMeta);">
                                     </div>
-                                    <div ng-show="!metaForm[dynamicField.code].$valid && isSubmit" class="ui pointing red basic label ">
+                                    <div ng-show="!metaForm[dynamicField.code].$valid && isSubmit"
+                                        class="ui pointing red basic label ">
                                         {{validation[dynamicField.code].errorMessage || DEFAULT_ERROR_MESSAGE}}
                                     </div>
                                 </div>
                             </div>
-                            <div id="{{dynamicField.code}} " class="field " ng-class="{ 'error':(!contentMeta[dynamicField.code] && dynamicField.required  && isSubmit), 'required': dynamicField.required} " name="{{dynamicField.code}} " ng-if="(dynamicField.inputType=='textarea'
+                            <div id="{{dynamicField.code}} " class="field "
+                                ng-class="{ 'error':(!contentMeta[dynamicField.code] && dynamicField.required  && isSubmit), 'required': dynamicField.required} "
+                                name="{{dynamicField.code}} " ng-if="(dynamicField.inputType=='textarea'
                                                     && dynamicField.visible) ">
                                 <label>{{dynamicField.label | uppercase}}</label>
                                 <div class=" ui input " ng-class="{ 'disabled':!dynamicField.editable } ">
-                                    <textarea id="{{dynamicField.code}} " placeholder={{field.placeholde}} ng-model="contentMeta.description " rows="{{dynamicField.renderingHints.rows}} " name="{{dynamicField.code}} " ng-required="{{dynamicField.required}}" ng-pattern="dynamicField.validation.regex['value']"
-                                        ng-maxlength="{{dynamicField.validation.max['value']}}" ng-keyup="onConfigChange({target: '#unitMetaTemplate', form:metaForm}); $parent.$parent.updateNode(contentMeta);" ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField,form:metaForm}); $parent.$parent.updateNode(contentMeta);" ng-disabled="{{!dynamicField.editable}}"></textarea>
+                                    <textarea id="{{dynamicField.code}} " placeholder={{field.placeholde}}
+                                        ng-model="contentMeta.description " rows="{{dynamicField.renderingHints.rows}} "
+                                        name="{{dynamicField.code}} " ng-required="{{dynamicField.required}}"
+                                        ng-pattern="dynamicField.validation.regex['value']"
+                                        ng-maxlength="{{dynamicField.validation.max['value']}}"
+                                        ng-keyup="onConfigChange({target: '#unitMetaTemplate', form:metaForm}); $parent.$parent.updateNode(contentMeta);"
+                                        ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField,form:metaForm}); $parent.$parent.updateNode(contentMeta);"
+                                        ng-disabled="{{!dynamicField.editable}}"></textarea>
                                 </div>
-                                <div ng-show="!metaForm[dynamicField.code].$valid  && isSubmit" class="ui pointing red basic label ">
+                                <div ng-show="!metaForm[dynamicField.code].$valid  && isSubmit"
+                                    class="ui pointing red basic label ">
                                     {{validation[dynamicField.code].errorMessage || DEFAULT_ERROR_MESSAGE}}
                                 </div>
                             </div>
-                            <div id="{{dynamicField.code}} " class="field " ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
+                            <div id="{{dynamicField.code}} " class="field "
+                                ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
                                 name="{{dynamicField.code}}" ng-if="dynamicField.inputType==='topicselector'">
                                 <div class="ui sub header paraHeading">
-                                    <p class="padding-top-3px">{{dynamicField.label | uppercase}} ({{contentMeta[dynamicField.code].length || 0}})</p>
+                                    <p class="padding-top-3px">{{dynamicField.label | uppercase}}
+                                        ({{contentMeta[dynamicField.code].length || 0}})</p>
                                 </div>
-                                <topic-selector class="concept-field" config=dynamicField ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField, form:metaForm})"></topic-selector>
+                                <topic-selector class="concept-field" config=dynamicField
+                                    ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField, form:metaForm})">
+                                </topic-selector>
                             </div>
-                            <div id="{{dynamicField.code}} " class="field " ng-class="{ 'error': (!contentMeta[dynamicField.code].length && dynamicField.required  && isSubmit), 'required': dynamicField.required} "
+                            <div id="{{dynamicField.code}} " class="field "
+                                ng-class="{ 'error': (!contentMeta[dynamicField.code].length && dynamicField.required  && isSubmit), 'required': dynamicField.required} "
                                 name="{{dynamicField.code}} " ng-if="(dynamicField.inputType=='keywordsuggestion'
                                             && dynamicField.visible) " ng-required="{{dynamicField.required}} ">
                                 <label>{{dynamicField.label | uppercase}}</label>
-                                <keywords config=dynamicField ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField,form:metaForm})"></keywords>
+                                <keywords config=dynamicField
+                                    ng-click="onConfigChange({target: '#unitMetaTemplate', field:dynamicField,form:metaForm})">
+                                </keywords>
                             </div>
-                            <div id="{{dynamicField.code}} " class="field " ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
-                            name="{{dynamicField.code}}" ng-if="dynamicField.inputType==='multiselect'">
-                            <label>{{dynamicField.label | uppercase}}</label>
-               
-                            
-                                <div ng-repeat="data in contentMeta['prerequisiteData']">
-                                    {{data}} 
-                                </div>
-                                
-                                        <select  ng-model="blisterPackTemplateSelected" ng-change="changedValue(blisterPackTemplateSelected); $parent.$parent.updateOptions(itemList)" 
-                                             data-ng-options="blisterPackTemplate as blisterPackTemplate.name for blisterPackTemplate in prerequisiteoptions">
-                                            <option value="">Select Prerequisites</option>
-                                        </select>
-                                       
-                                     
-                          <!-- <select> 
-                            <option ng-repeat="option in contentMeta['prerequisite']" ng-select="onOptionChange($event)">{{option.name}}</option>
-                          </select> -->
+                            <div id="{{dynamicField.code}} " class="field "
+                            ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
+                            name="{{dynamicField.code}}" ng-if="dynamicField.inputType ==='text' && dynamicField.code === 'prerequisite'">
+                            <div class="ui sub header paraHeading">
+                                <p class="padding-top-3px">{{dynamicField.label | uppercase}}
+                                    ({{contentMeta[dynamicField.code].length || 0}})</p>
+                            </div>
+                          
+                            <select ng-model="blisterPackTemplateSelected"
+                                ng-change="changedValue(blisterPackTemplateSelected); $parent.$parent.updateOptions(itemList)"
+                                data-ng-options="blisterPackTemplate as blisterPackTemplate for blisterPackTemplate in prerequisiteoptions">
+                                <option value="">Select Prerequisites</option>
+                            </select>
+                
                         </div>
-         
+
+                        <div id="{{dynamicField.code}} " class="field "
+                        ng-class="{ 'error': (!contentMeta[dynamicField.code] && dynamicField.required) , 'required': dynamicField.required} "
+                        name="{{dynamicField.code}}" ng-if="dynamicField.inputType ==='text' && dynamicField.code === 'prerequisite_Data'">
+                        <div class="ui sub header paraHeading">
+                            <p class="padding-top-3px">{{dynamicField.label | uppercase}}
+                                ({{contentMeta[dynamicField.code].length || 0}})  </p>
+                        </div>
+                      
+                        <div ng-repeat="data in contentMeta['prerequisite_Data']">
+                            {{data | uppercase}}
+                        </div> 
+                        </div>
+
                         </div>
                     </div>
                 </div>
@@ -88,7 +122,8 @@
                             <td>:</td>
                             <td class="eleven wide">
                                 <span ng-if="!contentMeta[dynamicField.code].length">--</span>
-                                <span ng-repeat="topic in contentMeta[dynamicField.code]">{{topic}}{{$last ? '' : ', '}}</span>
+                                <span
+                                    ng-repeat="topic in contentMeta[dynamicField.code]">{{topic}}{{$last ? '' : ', '}}</span>
                             </td>
                         </tr>
                         <tr class="top aligned" ng-if="(dynamicField.inputType==='keywordsuggestion')">
